2003-10-28  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* camel-mime-utils.c (header_decode_date): better detection of
	broken date to give to broken_date_parser.

2003-10-24  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-text-index.c (text_index_name_add_buffer): If a word is
	longer than CAMEL_TEXT_INDEX_MAX_WORDLEN, then ignore it. This
	fixes bug #50096.

2003-10-08  Not Zed  <NotZed@Ximian.com>

	** See Bug #45504

	* camel-service.c (run_gethostbyx): new thread dispatcher which
	just consumes tasks on the lookup port.
	(get_hostbyx): generic lookup handler that handles cancellation.
	(camel_gethostbyname, camel_gethostbyaddr): Changed to use stuff
	above, sets up a request message and lets gethostbyx run it.
	(init_gethostbyx): setup threads for dns lookups,
	CAMEL_DNS_THREADS allows the number to be altered.

2003-10-08  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (header_decode_date): Allow timezone offsets
	to be up to 14 hours ahead of UTC. Fixes bug #49357.

2003-09-25  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/smtp/camel-smtp-transport.c (smtp_helo): If the
	localhost lookup results in a numeric IPv6 host, use the form
	"[IPv6:<addr>]" as specified in rfc2821. Fixes the first half of
	bug #46006.

2003-09-23  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (append_8bit): Don't forget to flush the
	iconv conversion.

2003-09-22  Not Zed  <NotZed@Ximian.com>

	** See bug #41610
	
	* providers/pop3/camel-pop3-folder.c (cmd_tocache): protect a
	divide by 0 for 0 length messages.

2003-09-08  Rodney Dawes  <dobey@ixmian.com>

	* camel-service.c: #include sys/types.h and sys/time.h, fixes
	portability as per the patch in bug #21480
	
2003-09-05  Not Zed  <NotZed@Ximian.com>

	* providers/imap/camel-imap-store.c (imap_noop): call
	camel_folder_sync bypassing the folder lock.  See
	imap_store_refresh_folders too.

2003-08-29  Not Zed  <NotZed@Ximian.com>

	** See bug #46674.
